@@ -16,6 +16,7 @@ Version 1.5.0
     * GreaseMonkey: added icon in statusbar
     * GreaseMonkey: added support for GM_Settings
     * GreaseMonkey: fixed userscripts when first loading plugin
+    * GreaseMonkey: run userscripts in all frames on page
     * oxygen: set rounded corners for tooltips
     * oxygen: workaround for transparent background of tooltips
     * X11: Set correct WM_CLASS property to windows
